# cub3D

./: .gitignore  CMakeLists.txt  Makefile  check_file.c  check_file_utils.c  colors.c  cub.h  cub3D.h  draw.c  draw_sprite.c  main.c  make_map.c  map.cub  move.c  parcer.c  parcer_init.c  raycasting.c  screenshot.c  spr_and_map.c  start
get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c
libft/: ft_atoi.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstsize.c  ft_strtrim.c  libft.h
minilibx/: mlx_xpm.c
mlx_dylib/: mlx_png.c  mlx_string_put.c  mlx_xpm.c
textures/: greystone.xpm  kapi.xpm  mossy.xpm  redbrick.xpm  wood.xpm
